  additional protection. We do advise configuring CSP headers to protect users
  in case they open a SVG file directly in the browser.
* …

==== Removed configuration ====

* (T276975) $wgAPIRequestLog, ignored since 1.43, has now been fully removed.
* $wgBlockTargetMigrationStage, ignored since 1.43, has now been fully removed.
* …

=== New user-facing features in 1.46 ===

* (T413375) A new parser function has been added, {{#isbn}}, which replaces
  the ISBN "magic link" functionality for those wikis which have chosen to
  disable it.
* (T12814) Special:MovePage can now move over existing pages when moving the
  talk page (following the same logic as for moving the subject page).
* (T12814) Special:MovePage will now fail loudly if you ask to move the
  the talk page but it couldn't be moved (rather than not moving the
  talk page and displaying an easy-to-miss error message)
* (T85393) Special:MovePage will now require explicit confirmation if the
  page you are trying to move to is protected against creation.
* …

=== New features for sysadmins in 1.46 ===

* The 'arrays' localisation cache backend is more compact: a redundant list of
  message keys, and fallback data from other languages, are now deduplicated.
  Old cache files should either auto-update or continue to be readable where
  unchanged.
* The update.php maintenance script and the web-based schema updater now skips
  messages about schema updates that were already applied in earlier MediaWiki
  versions.
* …

=== New developer features in 1.46 ===

* Various functions are now marked with the #[\NoDiscard] attribute, which will
  cause PHP 8.5 (and Phan) to emit warnings when their return values are not
  used, as that is usually a mistake. This has no effect when running on PHP
  8.4 or earlier.
* …

=== External library changes in 1.46 ===

==== New external libraries ====

* …

===== New development-only external libraries =====

* …

==== Changed external libraries ====
