@@ -1473,9 +1473,7 @@ abstract class Skin extends ContextSource {
 			}
 
 			if ( $user->isRegistered() ) {
-				if ( $this->getConfig()->get( MainConfigNames::EnableSpecialMute ) &&
-					$this->getUser()->isNamed()
-				) {
+				if ( $this->getUser()->isNamed() ) {
 					$nav_urls['mute'] = [
 						'text' => $this->msg( 'mute-preferences' )->text(),
 						'href' => SkinComponentUtils::makeSpecialUrlSubpage( 'Mute', $target )
