@@ -4072,7 +4072,6 @@
 	"specialmute-header": "Please select your mute preferences for user <b>{{BIDI:[[User:$1|$1]]}}</b>.",
 	"specialmute-error-invalid-user": "The username requested could not be found.",
 	"specialmute-error-email-disabled": "Mute features are unavailable, because the wiki administrator has disabled email features for this wiki.",
-	"specialmute-error-mutelist-disabled": "Mute features are unavailable, because the wiki administrator has disabled the email mutelist features for this wiki.",
 	"specialmute-error-no-email-set": "Mute features are unavailable, because you haven't confirmed your email address.",
 	"specialmute-error-no-options": "Mute features are unavailable.",
 	"specialmute-email-footer": "To manage email preferences for user {{BIDI:$2}}, please visit the following URL:\n$1",
