@@ -4349,10 +4349,9 @@
 	"specialmute-label-mute-email": "Label for the checkbox that mutes/unmutes emails from the specified user.",
 	"specialmute-header": "Used as header text on [[Special:Mute]]. Shown before the form with the muting options.\n* $1 - User selected for muting",
 	"specialmute-error-invalid-user": "Error displayed when the username cannot be found.",
-	"specialmute-error-email-disabled": "Error displayed when there are no options available to mute on [[Special:Mute]].\nSee also:\n* {{msg-mw|specialmute-error-mutelist-disabled}}\n* {{msg-mw|specialmute-error-no-email-set}}\n* {{msg-mw|specialmute-error-no-options}}",
-	"specialmute-error-mutelist-disabled": "Error displayed when there are no options available to mute on [[Special:Mute]].\nSee also:\n* {{msg-mw|specialmute-error-email-disabled}}\n* {{msg-mw|specialmute-error-no-email-set}}\n* {{msg-mw|specialmute-error-no-options}}",
-	"specialmute-error-no-email-set": "Error displayed when there are no options available to mute on [[Special:Mute]].\nSee also:\n* {{msg-mw|specialmute-error-email-disabled}}\n* {{msg-mw|specialmute-error-mutelist-disabled}}\n* {{msg-mw|specialmute-error-no-options}}",
-	"specialmute-error-no-options": "Error displayed when there are no options available to mute on [[Special:Mute]].\nSee also:\n* {{msg-mw|specialmute-error-email-disabled}}\n* {{msg-mw|specialmute-error-mutelist-disabled}}\n* {{msg-mw|specialmute-error-no-email-set}}",
+	"specialmute-error-email-disabled": "Error displayed when there are no options available to mute on [[Special:Mute]].\nSee also:\n* {{msg-mw|specialmute-error-no-email-set}}\n* {{msg-mw|specialmute-error-no-options}}",
+	"specialmute-error-no-email-set": "Error displayed when there are no options available to mute on [[Special:Mute]].\nSee also:\n* {{msg-mw|specialmute-error-email-disabled}}\n* {{msg-mw|specialmute-error-no-options}}",
+	"specialmute-error-no-options": "Error displayed when there are no options available to mute on [[Special:Mute]].\nSee also:\n* {{msg-mw|specialmute-error-email-disabled}}\n* {{msg-mw|specialmute-error-no-email-set}}",
 	"specialmute-email-footer": "Email footer in plain text linking to [[Special:Mute]] preselecting the sender to manage muting options.\n* $1 - Url linking to [[Special:Mute]].\n* $2 - The user sending the email.",
 	"specialmute-login-required": "Error displayed when a user tries to access [[Special:Mute]] before logging in.",
 	"specialmute-login-required-for-temp-user": "Error displayed when a user tries to access [[Special:Mute]] while logged in to a temporary account.",
